🔄 SWAP: Part Numbers - Technical SEO ↔ Success Metrics
📋 PART NUMBER REORGANIZATION:

🔄 SWAPPED PARTS:
- Part 5: Technical SEO Crisis - Core Web Vitals Analysis (was Part 6)
- Part 6: Success Metrics & KPIs (was Part 5)
- Part 7: Data Sources & Methodology (unchanged)

📝 UPDATED REFERENCES:
- Section headers: Part 5 ↔ Part 6 titles swapped
- Flow indicators: Updated all progression badges
- Navigation links: Reordered in floating navigation menu
- Quick navigation: Updated 'View Part 6: Success Metrics' button
- Section flow: Parts 1-4 → Part 5 (Technical SEO) → Part 6 (Success Metrics) → Part 7 (Data Sources)

🎯 NEW DOCUMENT FLOW:
1. Parts 1-4: Strategic Foundation & Analysis
2. Part 5: ⚡ Technical SEO Crisis - Core Web Vitals Analysis
3. Part 6: 📊 Success Metrics & KPIs
4. Part 7: 📊 Data Sources & Methodology

✅ RESULT: Better logical flow with technical implementation coming before success measurement, maintaining all content while improving document structure and user experience.

--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -2300,7 +2300,7 @@
                             <h5 class="card-title text-success fw-bold mb-2">🚀 Complete Strategic Impact Projections</h5>
                             <p class="mb-2">Comprehensive 12-month timeline, performance targets, and success metrics are centralized for easy reference.</p>
                             <a href="#success-metrics" class="btn btn-success btn-sm">
-                                <i class="fas fa-chart-line me-2"></i>View Part 5: Success Metrics & KPIs
+                                <i class="fas fa-chart-line me-2"></i>View Part 6: Success Metrics & KPIs
                             </a>
                         </div>
                     </div>
@@ -5756,18 +5756,18 @@
             <div class="d-flex align-items-center justify-content-center">
                 <span class="badge bg-success me-2">Parts 1-4 Complete</span>
                 <i class="fas fa-arrow-right text-muted me-2"></i>
-                <span class="badge bg-primary me-2">Part 5: Success Metrics & KPIs</span>
-                <small class="text-muted ms-2">Centralized performance targets and impact projections</small>
+                <span class="badge bg-danger me-2">Part 5: Technical SEO Crisis</span>
+                <small class="text-muted ms-2">Core Web Vitals performance issues impacting rankings</small>
             </div>
         </div>
     </div>
 
     <!-- Main Content -->
     <div class="container mt-5 pt-5">
-        <!-- Part 5: Success Metrics & KPIs -->
+        <!-- Part 6: Success Metrics & KPIs -->
         <section id="success-metrics" class="mb-5">
             <div class="section-header">
-                <h2 class="display-5">📊 Part 5: Success Metrics & KPIs</h2>
+                <h2 class="display-5">📊 Part 6: Success Metrics & KPIs</h2>
                 <p class="text-muted">Comprehensive performance targets, impact projections, and success measurement framework based on verified data</p>
                 <div class="alert alert-info border-0 p-3 mt-3">
                     <small>
@@ -6428,18 +6428,18 @@
         <div class="container-fluid bg-light py-3 mb-4">
             <div class="container">
                 <div class="d-flex align-items-center justify-content-center">
-                    <span class="badge bg-success me-2">Part 5 Complete</span>
+                    <span class="badge bg-success me-2">Part 6 Complete</span>
                     <i class="fas fa-arrow-right text-muted me-2"></i>
-                    <span class="badge bg-danger me-2">Part 6: Technical SEO Crisis</span>
+                    <span class="badge bg-danger me-2">Part 5: Technical SEO Crisis</span>
                     <small class="text-muted ms-2">Core Web Vitals performance issues impacting rankings</small>
                 </div>
             </div>
         </div>
 
-        <!-- Part 6: Technical SEO - Core Web Vitals Crisis -->
+        <!-- Part 5: Technical SEO - Core Web Vitals Crisis -->
         <section id="technical-seo" class="mb-5">
             <div class="section-header">
-                <h2 class="display-5">⚡ Part 6: Technical SEO Crisis - Core Web Vitals Analysis</h2>
+                <h2 class="display-5">⚡ Part 5: Technical SEO Crisis - Core Web Vitals Analysis</h2>
                 <p class="text-muted">Critical performance issues directly impacting search rankings and user experience</p>
             </div>
 
@@ -6771,6 +6771,18 @@
         <div class="container-fluid bg-light py-3 mb-4">
             <div class="container">
                 <div class="d-flex align-items-center justify-content-center">
+                    <span class="badge bg-success me-2">Part 5 Complete</span>
+                    <i class="fas fa-arrow-right text-muted me-2"></i>
+                    <span class="badge bg-primary me-2">Part 6: Success Metrics & KPIs</span>
+                    <small class="text-muted ms-2">Centralized performance targets and impact projections</small>
+                </div>
+            </div>
+        </div>
+
+        <!-- Section Flow Indicator -->
+        <div class="container-fluid bg-light py-3 mb-4">
+            <div class="container">
+                <div class="d-flex align-items-center justify-content-center">
                     <span class="badge bg-success me-2">Part 6 Complete</span>
                     <i class="fas fa-arrow-right text-muted me-2"></i>
                     <span class="badge bg-secondary me-2">Part 7: Data Sources & Methodology</span>
@@ -6928,8 +6940,8 @@
                                         <li><a href="#program-analysis" data-section="program"><i class="fas fa-exclamation-triangle"></i> 🚨 Part 2: Crisis Analysis & Program Recovery Strategy</a></li>
                 <li><a href="#seo-insights" data-section="seo"><i class="fas fa-search"></i> 🔍 Part 3: SEO Insights & Technical Analysis</a></li>
                         <li><a href="#content-strategy" data-section="content"><i class="fas fa-pen-fancy"></i> 📝 Part 4: Strategic Content Roadmap</a></li>
-                        <li><a href="#success-metrics" data-section="metrics"><i class="fas fa-bullseye"></i> 📊 Part 5: Success Metrics & KPIs</a></li>
-                        <li><a href="#technical-seo" data-section="technical"><i class="fas fa-bolt"></i> ⚡ Part 6: Technical SEO Crisis</a></li>
+                        <li><a href="#technical-seo" data-section="technical"><i class="fas fa-bolt"></i> ⚡ Part 5: Technical SEO Crisis</a></li>
+                        <li><a href="#success-metrics" data-section="metrics"><i class="fas fa-bullseye"></i> 📊 Part 6: Success Metrics & KPIs</a></li>
                         <li><a href="#data-sources" data-section="data"><i class="fas fa-database"></i> 📊 Part 7: Data Sources & Methodology</a></li>
                     </ul>
                                 </div>
