--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -5935,56 +5935,201 @@
                 <div class="col-md-8">
                     <div class="card border-primary h-100">
                         <div class="card-header bg-primary text-white">
-                            <h6 class="mb-0">🗓️ 30-Day Implementation Roadmap</h6>
+                            <h6 class="mb-0">🗓️ 12-Month Implementation Roadmap</h6>
+                            <small class="text-light">Comprehensive Core Web Vitals transformation timeline</small>
                         </div>
                         <div class="card-body">
-                            <div class="row g-3">
-                                <div class="col-md-3">
-                                    <div class="text-center">
-                                        <h6 class="text-danger">Week 1: LCP</h6>
-                                        <ul class="list-unstyled small">
-                                            <li>✅ fetchpriority="high"</li>
-                                            <li>✅ Speculation Rules API</li>
-                                            <li>✅ Early Hints (103)</li>
-                                            <li>✅ CDN optimization</li>
-                                            <li>✅ Image format updates</li>
-                                        </ul>
+                            <!-- Q1: Foundation & Quick Wins -->
+                            <div class="mb-4">
+                                <h6 class="text-primary fw-bold mb-3">🚀 Q1: Foundation & Quick Wins (Months 1-3)</h6>
+                                <div class="row g-3">
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-danger small fw-bold">Month 1: LCP Crisis</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🖼️ Image optimization (WebP/AVIF)</li>
+                                                <li>⚡ fetchpriority="high" deployment</li>
+                                                <li>🌐 CDN configuration upgrade</li>
+                                                <li>📄 Preload critical resources</li>
+                                                <li>🔍 Performance audit baseline</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-warning small fw-bold">Month 2: INP Foundation</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🧹 JavaScript audit & cleanup</li>
+                                                <li>⚙️ scheduler.yield() implementation</li>
+                                                <li>📱 Third-party script optimization</li>
+                                                <li>🔄 Code splitting strategy</li>
+                                                <li>📊 LoAF API monitoring setup</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-success small fw-bold">Month 3: CLS & Monitoring</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>📐 Layout shift prevention</li>
+                                                <li>🎨 Font optimization (font-display)</li>
+                                                <li>📊 Real User Monitoring (RUM)</li>
+                                                <li>🤖 Lighthouse CI integration</li>
+                                                <li>📈 Performance dashboard setup</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="text-center">
-                                        <h6 class="text-warning">Week 2: INP</h6>
-                                        <ul class="list-unstyled small">
-                                            <li>✅ scheduler.yield()</li>
-                                            <li>✅ content-visibility CSS</li>
-                                            <li>✅ LoAF monitoring</li>
-                                            <li>✅ Code splitting</li>
-                                            <li>✅ Web Workers</li>
-                                        </ul>
+                            </div>
+
+                            <!-- Q2: Advanced Optimization -->
+                            <div class="mb-4">
+                                <h6 class="text-info fw-bold mb-3">🔧 Q2: Advanced Optimization (Months 4-6)</h6>
+                                <div class="row g-3">
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-primary small fw-bold">Month 4: Advanced LCP</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🚀 Speculation Rules API</li>
+                                                <li>💡 Early Hints (HTTP 103)</li>
+                                                <li>🎭 Critical CSS inlining</li>
+                                                <li>🗜️ Resource compression optimization</li>
+                                                <li>📱 Mobile-specific optimizations</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-secondary small fw-bold">Month 5: INP Excellence</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>👷 Web Workers implementation</li>
+                                                <li>👀 content-visibility CSS</li>
+                                                <li>⚡ Interaction optimization</li>
+                                                <li>🎯 Event delegation improvements</li>
+                                                <li>🔄 Lazy loading enhancements</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-warning small fw-bold">Month 6: Infrastructure</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🌍 Edge computing setup</li>
+                                                <li>🗄️ Database query optimization</li>
+                                                <li>🔧 Server-side performance tuning</li>
+                                                <li>📊 Advanced analytics integration</li>
+                                                <li>🎯 First milestone: 25% improvement</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="text-center">
-                                        <h6 class="text-success">Week 3: CLS</h6>
-                                        <ul class="list-unstyled small">
-                                            <li>✅ aspect-ratio properties</li>
-                                            <li>✅ Font optimization</li>
-                                            <li>✅ Image dimensions</li>
-                                            <li>✅ bfcache eligibility</li>
-                                            <li>✅ Performance testing</li>
-                                        </ul>
+                            </div>
+
+                            <!-- Q3: Performance Excellence -->
+                            <div class="mb-4">
+                                <h6 class="text-success fw-bold mb-3">⚡ Q3: Performance Excellence (Months 7-9)</h6>
+                                <div class="row g-3">
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-info small fw-bold">Month 7: User Experience</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🎨 Perceived performance optimization</li>
+                                                <li>🔄 Progressive loading strategies</li>
+                                                <li>📱 Responsive design optimization</li>
+                                                <li>🎭 Animation performance tuning</li>
+                                                <li>🧪 A/B testing performance impact</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-danger small fw-bold">Month 8: Mobile Excellence</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>📱 Mobile-first optimization</li>
+                                                <li>🔋 Battery-conscious performance</li>
+                                                <li>📶 Network-aware loading</li>
+                                                <li>🎯 Touch interaction optimization</li>
+                                                <li>📊 Mobile-specific monitoring</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-success small fw-bold">Month 9: Competitive Edge</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🏆 Industry benchmark analysis</li>
+                                                <li>🔍 Competitor performance audit</li>
+                                                <li>🎯 Second milestone: 47% target</li>
+                                                <li>📈 ROI measurement & reporting</li>
+                                                <li>🔄 Strategy refinement</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="text-center">
-                                        <h6 class="text-info">Week 4: Monitor</h6>
-                                        <ul class="list-unstyled small">
-                                            <li>✅ Real User Monitoring</li>
-                                            <li>✅ Lighthouse CI</li>
-                                            <li>✅ Search Console tracking</li>
-                                            <li>✅ Performance budgets</li>
-                                            <li>✅ Documentation</li>
-                                        </ul>
+                            </div>
+
+                            <!-- Q4: Innovation & Future-Proofing -->
+                            <div class="mb-3">
+                                <h6 class="text-dark fw-bold mb-3">🚀 Q4: Innovation & Future-Proofing (Months 10-12)</h6>
+                                <div class="row g-3">
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-primary small fw-bold">Month 10: Next-Gen Tech</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🔮 Emerging web standards adoption</li>
+                                                <li>🤖 AI-powered optimization</li>
+                                                <li>⚡ HTTP/3 implementation</li>
+                                                <li>🎭 Advanced browser features</li>
+                                                <li>🔬 Experimental optimizations</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-secondary small fw-bold">Month 11: Scale & Automation</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🤖 Automated optimization pipelines</li>
+                                                <li>📊 ML-powered performance insights</li>
+                                                <li>🔄 Self-healing performance systems</li>
+                                                <li>🎯 Predictive performance analytics</li>
+                                                <li>🛡️ Performance regression prevention</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="border rounded p-3 h-100">
+                                            <h6 class="text-success small fw-bold">Month 12: Excellence & Leadership</h6>
+                                            <ul class="list-unstyled small mb-0">
+                                                <li>🏆 60%+ competitive leadership</li>
+                                                <li>📚 Performance knowledge base</li>
+                                                <li>👥 Team training & certification</li>
+                                                <li>🔄 2026 strategy planning</li>
+                                                <li>🎉 Performance excellence celebration</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Key Milestones -->
+                            <div class="alert alert-light border border-primary">
+                                <h6 class="text-primary fw-bold mb-2">🎯 Key Milestones & Success Metrics</h6>
+                                <div class="row g-2 small">
+                                    <div class="col-md-3">
+                                        <strong class="text-danger">Month 3:</strong><br>
+                                        <small>Foundation complete, 15% improvement</small>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <strong class="text-warning">Month 6:</strong><br>
+                                        <small>Advanced optimizations, 25% improvement</small>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <strong class="text-success">Month 9:</strong><br>
+                                        <small>Industry average reached, 47% success rate</small>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <strong class="text-primary">Month 12:</strong><br>
+                                        <small>Market leadership, 60%+ success rate</small>
                                     </div>
                                 </div>
                             </div>
