--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -6018,7 +6018,7 @@
                                                 <li>🗄️ Database query optimization</li>
                                                 <li>🔧 Server-side performance tuning</li>
                                                 <li>📊 Advanced analytics integration</li>
-                                                <li>🎯 First milestone: 25% improvement</li>
+                                                <li>🎯 Foundation milestone checkpoint</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -6100,7 +6100,7 @@
                                         <div class="border rounded p-3 h-100">
                                             <h6 class="text-success small fw-bold">Month 12: Excellence & Leadership</h6>
                                             <ul class="list-unstyled small mb-0">
-                                                <li>🏆 60%+ competitive leadership</li>
+                                                <li>🏆 Performance optimization excellence</li>
                                                 <li>📚 Performance knowledge base</li>
                                                 <li>👥 Team training & certification</li>
                                                 <li>🔄 2026 strategy planning</li>
@@ -6113,23 +6113,23 @@
 
                             <!-- Key Milestones -->
                             <div class="alert alert-light border border-primary">
-                                <h6 class="text-primary fw-bold mb-2">🎯 Key Milestones & Success Metrics</h6>
+                                <h6 class="text-primary fw-bold mb-2">🎯 Implementation Milestones</h6>
                                 <div class="row g-2 small">
                                     <div class="col-md-3">
                                         <strong class="text-danger">Month 3:</strong><br>
-                                        <small>Foundation complete, 15% improvement</small>
+                                        <small>Foundation & monitoring in place</small>
                                     </div>
                                     <div class="col-md-3">
                                         <strong class="text-warning">Month 6:</strong><br>
-                                        <small>Advanced optimizations, 25% improvement</small>
+                                        <small>Advanced optimizations deployed</small>
                                     </div>
                                     <div class="col-md-3">
                                         <strong class="text-success">Month 9:</strong><br>
-                                        <small>Industry average reached, 47% success rate</small>
+                                        <small>Performance excellence established</small>
                                     </div>
                                     <div class="col-md-3">
                                         <strong class="text-primary">Month 12:</strong><br>
-                                        <small>Market leadership, 60%+ success rate</small>
+                                        <small>Continuous optimization achieved</small>
                                     </div>
                                 </div>
                             </div>
@@ -6162,7 +6162,7 @@
                             </div>
                             <hr>
                             <div class="alert alert-info border-0 mb-0">
-                                <small><strong>Target:</strong> 47% (industry average) within 6 months • 60%+ competitive leadership position</small>
+                                <small><strong>Goal:</strong> Gradual improvement toward industry benchmarks through systematic optimization over 12-month timeline</small>
                             </div>
                         </div>
                     </div>
@@ -6208,25 +6208,31 @@
                         <div class="card-body">
                             <div class="row g-3 text-center">
                                 <div class="col-6">
-                                    <div class="h4 text-success">+25%</div>
-                                    <h6 class="text-success small">Search Rankings</h6>
-                                    <small class="text-muted">Core Web Vitals compliance</small>
+                                    <div class="h4 text-success">↑</div>
+                                    <h6 class="text-success small">Core Web Vitals Score</h6>
+                                    <small class="text-muted">Performance metrics improvement</small>
                                 </div>
                                 <div class="col-6">
-                                    <div class="h4 text-primary">-40%</div>
-                                    <h6 class="text-primary small">Bounce Rate</h6>
-                                    <small class="text-muted">Faster page loads</small>
+                                    <div class="h4 text-primary">↓</div>
+                                    <h6 class="text-primary small">Page Load Times</h6>
+                                    <small class="text-muted">Faster content delivery</small>
                                 </div>
                                 <div class="col-6">
-                                    <div class="h4 text-warning">+15%</div>
-                                    <h6 class="text-warning small">User Engagement</h6>
-                                    <small class="text-muted">Better responsiveness</small>
+                                    <div class="h4 text-warning">↑</div>
+                                    <h6 class="text-warning small">User Experience</h6>
+                                    <small class="text-muted">Better site responsiveness</small>
                                 </div>
                                 <div class="col-6">
-                                    <div class="h4 text-info">+30%</div>
-                                    <h6 class="text-info small">Mobile Experience</h6>
-                                    <small class="text-muted">Mobile optimization</small>
+                                    <div class="h4 text-info">↑</div>
+                                    <h6 class="text-info small">Mobile Performance</h6>
+                                    <small class="text-muted">Device optimization</small>
                                 </div>
+                            </div>
+                            <div class="alert alert-light border-0 mt-3 mb-0">
+                                <small class="text-muted">
+                                    <i class="fas fa-info-circle me-1"></i>
+                                    <strong>Conservative Projections:</strong> Expected improvements based on technical optimizations. Actual results may vary depending on implementation timeline and site-specific factors.
+                                </small>
                             </div>
                         </div>
                     </div>
@@ -6236,7 +6242,7 @@
             <!-- Bottom Line Impact -->
             <div class="alert alert-success border-0">
                 <h6 class="alert-heading">🏆 Strategic Impact Summary</h6>
-                <p class="mb-0">Implementing these Core Web Vitals optimizations will directly support search ranking improvements, user experience enhancement, and conversion optimization - critical components for the enrollment recovery strategy outlined in Parts 1-6.</p>
+                <p class="mb-0">Implementing these Core Web Vitals optimizations will directly support technical performance improvements, user experience enhancement, and site optimization - key components for the enrollment recovery strategy outlined in Parts 1-6.</p>
             </div>
         </section>
 
