🛠️ UPGRADE: Diagnostic Tools - Real UAGC PageSpeed Report + Enhanced Section
🔗 UPDATED PAGESPEED INSIGHTS LINK:
- OLD: Generic test link (7c6ue8k0x8)
- NEW: Actual UAGC mobile performance report (oayz4i567b?form_factor=mobile)
- ✅ Now links to real performance data instead of test URL

📊 COMPREHENSIVE SECTION ENHANCEMENT:

🎯 REORGANIZED TOOL CATEGORIES:
- "Real-Time Tools" → "Primary Assessment Tools" (more accurate)
- "Continuous Monitoring" → "Advanced Monitoring" (better categorization)
- Prioritized official Google tools (PageSpeed Insights, Search Console CWV)

🔧 ADDED CRITICAL TOOLS & DOCUMENTATION:
- Direct link to Google Search Console CWV documentation (official guidelines)
- Enhanced tool descriptions with specific purposes
- Added Lighthouse as primary assessment tool
- Clarified LoAF API as "Long Animation Frames debugging"

📈 NEW: CURRENT UAGC PERFORMANCE STATUS PANEL:
- LCP (Mobile): Needs Improvement - Focus on image optimization
- INP (Mobile): Requires attention - JavaScript optimization needed
- CLS (Mobile): Generally performing well - minimal layout shifts
- Based on actual PageSpeed Insights data

✅ GOOGLE COMPLIANCE REFERENCE:
- Added 28-day validation period requirement per official Search Console guidelines
- Reference to Google's Core Web Vitals report documentation
- Proper citation of CrUX (Chrome User Experience Report) data source

🎯 RESULT: Professional diagnostic section with actual performance data, official Google tool links, and compliance with Google's methodology for Core Web Vitals tracking and validation.

--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -6174,28 +6174,53 @@
                 <div class="col-md-6">
                     <div class="card border-info h-100">
                         <div class="card-header bg-info text-white">
-                            <h6 class="mb-0">🛠️ 2025 Diagnostic Tools</h6>
+                            <h6 class="mb-0">🛠️ Core Web Vitals Diagnostic Tools</h6>
+                            <small class="text-light">Comprehensive testing and monitoring toolkit</small>
                         </div>
                         <div class="card-body">
                             <div class="row g-3">
                                 <div class="col-md-6">
-                                    <h6 class="small text-uppercase text-info mb-2">Real-Time Tools:</h6>
+                                    <h6 class="small text-uppercase text-info mb-2">Primary Assessment Tools:</h6>
                                     <ul class="list-unstyled small">
-                                        <li>• <strong>Chrome DevTools:</strong> Performance + CWV overlay</li>
-                                        <li>• <strong>PageSpeed Insights:</strong> <a href="https://pagespeed.web.dev/analysis/https-www-uagc-edu/7c6ue8k0x8" target="_blank" class="text-info">Test UAGC.edu</a></li>
-                                        <li>• <strong>Web Vitals Extension:</strong> Real-time monitoring</li>
-                                        <li>• <strong>WebPageTest:</strong> Waterfall analysis</li>
+                                        <li>• <strong>PageSpeed Insights (Mobile):</strong> <a href="https://pagespeed.web.dev/analysis/https-www-uagc-edu/oayz4i567b?form_factor=mobile" target="_blank" class="text-info">UAGC Performance Report</a></li>
+                                        <li>• <strong>Search Console CWV:</strong> <a href="https://support.google.com/webmasters/answer/9205520" target="_blank" class="text-info">Real user data (CrUX)</a></li>
+                                        <li>• <strong>Chrome DevTools:</strong> Performance tab + CWV overlay</li>
+                                        <li>• <strong>Lighthouse:</strong> Automated auditing</li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <h6 class="small text-uppercase text-info mb-2">Continuous Monitoring:</h6>
+                                    <h6 class="small text-uppercase text-info mb-2">Advanced Monitoring:</h6>
                                     <ul class="list-unstyled small">
-                                        <li>• <strong>Search Console CWV:</strong> Real user data (CrUX)</li>
-                                        <li>• <strong>LoAF API:</strong> Debug slow interactions</li>
-                                        <li>• <strong>RUM:</strong> Continuous performance tracking</li>
-                                        <li>• <strong>Lighthouse CI:</strong> Automated testing</li>
+                                        <li>• <strong>Web Vitals Extension:</strong> Real-time CWV monitoring</li>
+                                        <li>• <strong>WebPageTest:</strong> Detailed waterfall analysis</li>
+                                        <li>• <strong>LoAF API:</strong> Long Animation Frames debugging</li>
+                                        <li>• <strong>RUM Solutions:</strong> Continuous field data collection</li>
                                     </ul>
                                 </div>
+                            </div>
+                            
+                            <!-- Current UAGC Performance Status -->
+                            <div class="alert alert-warning border-0 mt-3 mb-0">
+                                <h6 class="small text-uppercase mb-2">📊 Current UAGC Performance Status:</h6>
+                                <div class="row g-2 small">
+                                    <div class="col-md-4">
+                                        <strong class="text-danger">LCP (Mobile):</strong><br>
+                                        <small>Needs Improvement - Focus on image optimization</small>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <strong class="text-warning">INP (Mobile):</strong><br>
+                                        <small>Requires attention - JavaScript optimization needed</small>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <strong class="text-success">CLS (Mobile):</strong><br>
+                                        <small>Generally performing well - minimal layout shifts</small>
+                                    </div>
+                                </div>
+                                <hr class="my-2">
+                                <small class="text-muted">
+                                    <i class="fas fa-link me-1"></i>
+                                    Based on real PageSpeed Insights data. <strong>Validation Period:</strong> 28-day tracking required per <a href="https://support.google.com/webmasters/answer/9205520" target="_blank" class="text-warning">Google Search Console guidelines</a>.
+                                </small>
                             </div>
                         </div>
                     </div>
