--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -14,7 +14,7 @@
     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Strategy for Enrollment Recovery: A Crisis Plan</title>
+    <title>UAGC Enrollment Recovery Plan - Digital Strategy to Restore Growth</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Source+Sans+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -1530,12 +1530,17 @@
                 <div class="col-12">
                     <!-- Header -->
                     <div class="text-center mb-5">
-                        <h1 class="hero-title display-1 fw-bold mb-4 text-gradient" style="color: var(--text-light);">
-                            🎯 Digital Strategy for Enrollment Recovery
+                        <h1 class="hero-title display-3 fw-bold mb-4 text-white">
+                            UAGC Enrollment Recovery Plan
                         </h1>
-                        <p class="hero-subtitle lead-enhanced fs-3 text-warning fw-bold mb-5">
-                            A Crisis Plan for UAGC's Digital Transformation
+                        <p class="hero-subtitle lead fs-4 text-warning fw-bold mb-4">
+                            Digital Strategy to Restore Growth
                         </p>
+                        <div class="d-flex justify-content-center align-items-center gap-3 mb-3">
+                            <span class="badge bg-danger fs-6 px-3 py-2">🚨 Crisis Response</span>
+                            <span class="badge bg-success fs-6 px-3 py-2">📈 Recovery Strategy</span>
+                            <span class="badge bg-info fs-6 px-3 py-2">🎯 Action Plan</span>
+                        </div>
                     </div>
 
                     <!-- Executive Summary -->
