--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -606,10 +606,10 @@
         .hero-section {
             background: linear-gradient(135deg, var(--arizona-red), var(--arizona-blue));
             color: white;
-            padding: var(--space-4xl) 0;
+            padding: var(--space-3xl) 0;
             position: relative;
             overflow: hidden;
-            min-height: 100vh;
+            min-height: auto;
             display: flex;
             align-items: center;
         }
