--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -1759,7 +1759,7 @@
             <div class="alert alert-info border-0 shadow-sm mb-4">
                 <small class="text-info">
                     <i class="fas fa-link me-1"></i>
-                                            <strong>Clear Flow:</strong> Master baseline eliminates repetition → Parts 2-3 use this data → Part 4 content strategy → Part 5 detailed projections → Part 6 technical SEO analysis → Part 7 methodology
+                                            <strong>Clear Flow:</strong> Master baseline eliminates repetition → Parts 2-3 use this data → Part 4 content strategy → Part 5 website speed & performance → Part 6 success metrics → Part 7 methodology
                 </small>
             </div>
 
@@ -5959,8 +5959,8 @@
             <div class="d-flex align-items-center justify-content-center">
                 <span class="badge bg-success me-2">Parts 1-4 Complete</span>
                 <i class="fas fa-arrow-right text-muted me-2"></i>
-                                    <span class="badge bg-danger me-2">Part 5: Technical SEO Analysis</span>
-                <small class="text-muted ms-2">Core Web Vitals performance issues impacting rankings</small>
+                                    <span class="badge bg-danger me-2">Part 5: Website Speed & Performance</span>
+                <small class="text-muted ms-2">Why our slow website hurts enrollment and how to fix it</small>
             </div>
         </div>
     </div>
